# HALPI2-daemon

./: .bumpversion.cfg  .gitignore  CLAUDE.md  README.md  VERSION  halpid.service  pyproject.toml  run  update.py
.github/: release-drafter.yml
.github/ISSUE_TEMPLATE/: question.md
.github/actions/build-deb/: action.yml
.github/actions/run-tests/: action.yml
.github/scripts/: generate-changelog.sh  generate-release-notes.sh  rename-packages.sh
.github/workflows/: build.yml  main.yml  pr.yml  release-drafter.yml  release.yml  test-package-build.yml
config/: halpid.conf
debian/: changelog  control  copyright  halpid.install  halpid.postinst  halpid.postinst.debhelper  halpid.postrm  halpid.postrm.debhelper  halpid.prerm.debhelper  rules
docker/: Dockerfile.debtools  Dockerfile.devtools  docker-compose.devtools.yml
scripts/: halpi
src/halpi/: __init__.py  __main__.py  cli.py  const.py  daemon.py  i2c.py  server.py  state_machine.py
systemd/: halpid.service
tests/test_example/: test_hello.py
